--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "mysql2": "^3.14.3",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
