--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "morgan": "^1.10.1",
     "mysql2": "^3.14.3",
     "pg": "^8.16.3",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
